--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
 .App-logo {
   height: 40vmin;
@@ -35,4 +35,7 @@
   to {
     transform: rotate(360deg);
   }
+}
+.MuiFormHelperText-root{
+  color:red !important;
 }
